--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
 DB_USER=shortsAPI
-DB_PASS=password
-DB_Database=shorts
-DB_Port=8889
+DB_PASSWORD=password
+DB_DATABASE=shorts
+DB_PORT=8889
